--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -18,6 +18,9 @@
 #  last_failed_login_attempt_at :datetime
 #  failed_login_attempts        :integer          default(0), not null
 #  last_login_from              :string
+#  type                         :string
+#  human_user_id                :integer
+#  options                      :text
 #
 
 #  Copyright (c) 2008-2017, Puzzle ITC GmbH. This file is part of
@@ -26,6 +29,7 @@
 #  https://github.com/puzzle/cryptopus.
 
 root:
+  type: User::Human
   uid: 0
   username: root
   givenname: Root
@@ -37,6 +41,7 @@ root:
   private_key: <%= "!!binary \"#{FixturesHelper.read_private_key('root')}\"" %>
 
 bob:
+  type: User::Human
   username: bob
   givenname: Bob
   surname: test
@@ -46,6 +51,7 @@ bob:
   private_key: <%= "!!binary \"#{FixturesHelper.read_private_key('bob')}\"" %>
 
 alice:
+  type: User::Human
   username: alice
   givenname: Alice
   surname: test
@@ -56,6 +62,7 @@ alice:
 
 
 admin:
+  type: User::Human
   username: admin
   givenname: Admin
   surname: test
